--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 2rem;
       text-align: center;
     }
-    .<img src="Profile.JPG" alt="Yashnil Manthanwar" class="profile-img" />
+    .profile-img {
       width: 180px;
       height: 180px;
       object-fit: cover;
@@ -61,7 +61,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="profile.jpg" alt="Yashnil Manthanwar" class="profile-img" />
+    <img src="Profile.JPG" alt="Yashnil Manthanwar" class="profile-img" />
     <h1>Yashnil Manthanwar</h1>
     <p class="bio">
       A curious and determined individual who loves to explore and learn new things every day.
