--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 2rem;
       text-align: center;
     }
-    .YASHNIL-img {
+    .YASHNIL-img {<img src="YASHNIL.JPG" ... />
       width: 180px;
       height: 180px;
       object-fit: cover;
