--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 2rem;
       text-align: center;
     }
-    .{<img src="YASHNIL.JPG" ... />
+    .YASHNIL{img
       width: 180px;
       height: 180px;
       object-fit: cover;
