--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 2rem;
       text-align: center;
     }
-    .YASHNIL{img
+    .profile-img {
       width: 180px;
       height: 180px;
       object-fit: cover;
@@ -51,7 +51,6 @@
     .whatsapp:hover { background-color: #20b358; }
     .email { background-color: #0072C6; }
     .email:hover { background-color: #005da0; }
-
     footer {
       margin-top: 4rem;
       font-size: 0.9rem;
@@ -61,7 +60,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="Profile.JPG" alt="Yashnil Manthanwar" class="profile-img" />
+    <img src="YASHNIL.JPG" alt="Yashnil Manthanwar" class="profile-img" />
     <h1>Yashnil Manthanwar</h1>
     <p class="bio">
       A curious and determined individual who loves to explore and learn new things every day.
