--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       padding: 2rem;
       text-align: center;
     }
-    .profile-img {
+    .YASHNIL-img {
       width: 180px;
       height: 180px;
       object-fit: cover;
