--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 
     /* 🔥 Collage Background with 2 images */
     .background-collage {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: 
-        url('img1.jpg'),
-        url('img2.jpg');
-      background-size: 300px;
-      background-repeat: repeat;
-      opacity: 0.08;
-      z-index: -1;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: 
+    url('img1.jpg'),
+    url('img2.jpg');
+  background-size: 200px, 250px;
+  background-repeat: repeat;
+  background-position: top left, bottom right;
+  opacity: 0.08;
+  z-index: -1;
     }
 
     .container {
