--- a/index.html
+++ b/index.html
@@ -9,34 +9,38 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #333;
+      min-height: 100vh;
+      position: relative;
+      overflow: hidden;
     }
 
-    /* 🔥 Collage Background with 2 images */
-    .background-collage {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: 
-    url('img1.jpg'),
-    url('img2.jpg');
-  background-size: 200px, 250px;
-  background-repeat: repeat;
-  background-position: top left, bottom right;
-  opacity: 0.08;
-  z-index: -1;
+    /* 🔥 Background collage with only 2 images */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: 
+        url('img1.jpg'),
+        url('img2.jpg');
+      background-repeat: repeat;
+      background-size: 300px, 350px;
+      background-position: top left, bottom right;
+      opacity: 0.12;
+      z-index: -1;
     }
 
     .container {
       max-width: 900px;
-      margin: auto;
+      margin: 5rem auto;
       padding: 2rem;
       text-align: center;
-      position: relative;
+      background: rgba(255, 255, 255, 0.92);
+      border-radius: 20px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       z-index: 1;
-      background: rgba(255, 255, 255, 0.85);
-      border-radius: 12px;
-      margin-top: 3rem;
+      position: relative;
     }
 
     .YASHNIL-img {
@@ -79,20 +83,18 @@
     .email:hover { background-color: #005da0; }
 
     footer {
-      margin-top: 4rem;
+      margin-top: 3rem;
       font-size: 0.9rem;
       color: #777;
     }
   </style>
 </head>
 <body>
-  <div class="background-collage"></div>
-
   <div class="container">
     <img src="YASHNIL.JPG" alt="Yashnil Manthanwar" class="YASHNIL-img" />
     <h1>Yashnil Manthanwar</h1>
     <p class="bio">
-      A curious and determined individual who loves to explore and learn new things every day.
+      A curious and determined individual who loves to explore and learn new things every day.<br>
       Open to opportunities, growth, and meaningful connections.
     </p>
     <div class="buttons">
