--- a/index.html
+++ b/index.html
@@ -100,8 +100,11 @@
     <img src="YASHNIL.JPG" alt="Yashnil Manthanwar" class="YASHNIL-img" />
     <h1>Yashnil Manthanwar</h1>
     <p class="bio">
-      A curious and determined individual who loves to explore and learn new things every day.<br>
-      Open to opportunities, growth, and meaningful connections.
+      I'm a graphic designer with a poet's heart, transforming your brand's story into captivating
+      visuals. Having served as a Product Management Head at IndianMall, I bring a unique blend of
+      business acumen and creative flair. My designs are fueled by an insatiable love for learning and a
+      passion for bringing ideas to life.
+
     </p>
     <div class="buttons">
       <a href="https://instagram.com/yashnil._" target="_blank" class="insta">Instagram</a>
