--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>Yashnil Manthanwar</title>
 
   <!-- 👇 Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Open Sans', sans-serif;
       color: #333;
       min-height: 100vh;
       position: relative;
@@ -29,7 +29,7 @@
       background-repeat: repeat;
       background-size: 300px, 350px;
       background-position: top left, bottom right;
-      opacity: 0.12;
+      opacity: 0.40;
       z-index: -1;
     }
 
@@ -62,6 +62,7 @@
     }
 
     p.bio {
+      font-family: 'Open Sans', sans-serif;
       font-size: 1.15rem;
       max-width: 700px;
       margin: 0 auto 2rem;
@@ -69,21 +70,49 @@
     }
 
     .buttons a {
+      font-family: 'Rubik', sans-serif;
       display: inline-block;
       margin: 0.5rem;
       padding: 0.75rem 1.5rem;
       border-radius: 25px;
       text-decoration: none;
-      font-weight: 600;
-      transition: background 0.3s;
+      font-weight: 500;
       color: white;
-      font-family: 'Poppins', sans-serif;
+      position: relative;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      letter-spacing: 0.5px;
+    }
+
+    .buttons a::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 25px;
+      background: inherit;
+      filter: blur(8px);
+      opacity: 0;
+      transition: 0.3s;
+      z-index: -1;
+    }
+
+    .buttons a:hover {
+      transform: translateY(-5px) scale(1.05);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
+
+    .buttons a:hover::before {
+      opacity: 0.8;
     }
 
     .insta { background-color: #E1306C; }
     .insta:hover { background-color: #c42c5f; }
+
     .whatsapp { background-color: #25D366; }
     .whatsapp:hover { background-color: #20b358; }
+
     .email { background-color: #0072C6; }
     .email:hover { background-color: #005da0; }
 
@@ -91,7 +120,7 @@
       margin-top: 3rem;
       font-size: 0.9rem;
       color: #777;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Open Sans', sans-serif;
     }
   </style>
 </head>
@@ -104,7 +133,6 @@
       visuals. Having served as a Product Management Head at IndianMall, I bring a unique blend of
       business acumen and creative flair. My designs are fueled by an insatiable love for learning and a
       passion for bringing ideas to life.
-
     </p>
     <div class="buttons">
       <a href="https://instagram.com/yashnil._" target="_blank" class="insta">Instagram</a>
