--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Yashnil Manthanwar</title>
+  <title>Yashnil Ma</title>
 
   <!-- ✅ Favicon -->
-  <link rel="icon" type="image/jpeg" href="FAVICON.JPG" />
+  <link rel="icon" type="image/jpeg" href="favicon.jpg" />
 
   <!-- ✅ Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
 
-  <!-- ✅ Font Awesome for Icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- ✅ Font Awesome (icon support) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
     body {
@@ -78,9 +78,9 @@
     .buttons a {
       display: inline-flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.6rem;
       margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
+      padding: 0.75rem 1.6rem;
       border-radius: 30px;
       text-decoration: none;
       font-weight: 600;
@@ -92,7 +92,7 @@
     }
 
     .buttons a:hover {
-      transform: translateY(-3px) scale(1.03);
+      transform: scale(1.05) translateY(-3px);
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
     }
 
@@ -127,10 +127,10 @@
     </p>
 
     <div class="buttons">
-      <a href="https://instagram.com/yashnil._" target="_blank" class="insta">
+      <a href="https://instagram.com/yashnil._" target="_blank" class="insta" rel="noopener">
         <i class="fab fa-instagram"></i> Instagram
       </a>
-      <a href="https://wa.me/919322410521" target="_blank" class="whatsapp">
+      <a href="https://wa.me/919322410521" target="_blank" class="whatsapp" rel="noopener">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
       <a href="mailto:manthanwaryashnil@gmail.com" class="email">
