--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Yashnil Ma</title>
+  <title>Yashnil Manthanwar</title>
 
   <!-- ✅ Favicon -->
-  <link rel="icon" type="image/jpeg" href="favicon.jpg" />
+  <link rel="icon" type="image/jpeg" href="FAVIKON.jpg" />
 
   <!-- ✅ Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
