--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       font-family: 'Open Sans', sans-serif;
       color: #333;
       min-height: 100vh;
-      overflow: hidden;
+      overflow: auto; /* ✅ Mobile scroll fix */
       position: relative;
     }
 
