--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </p>
 
     <div class="buttons">
-      <a href="https://instagram.com/yashnil._" target="_blank" class="insta" rel="noopener">
+      <a href="https://instagram.com/yashnil_099" target="_blank" class="insta" rel="noopener">
         <i class="fab fa-instagram"></i> Instagram
       </a>
       <a href="https://wa.me/919322410521" target="_blank" class="whatsapp" rel="noopener">
