--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- ✅ Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans:wght@400;600&family=Rubik:wght@500&display=swap" rel="stylesheet">
 
-  <!-- ✅ Font Awesome (icon support) -->
+  <!-- ✅ Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
@@ -19,12 +19,11 @@
       margin: 0;
       font-family: 'Open Sans', sans-serif;
       color: #333;
+      background-color: #f2f2f2;
       min-height: 100vh;
-      overflow: auto; /* ✅ Mobile scroll fix */
       position: relative;
     }
 
-    /* 🔥 Background collage with 2 images */
     body::before {
       content: "";
       position: fixed;
@@ -35,7 +34,7 @@
       background-repeat: repeat;
       background-size: 300px, 350px;
       background-position: top left, bottom right;
-      opacity: 0.40;
+      opacity: 0.4;
       z-index: -1;
     }
 
@@ -44,11 +43,9 @@
       margin: 5rem auto;
       padding: 2rem;
       text-align: center;
-      background: rgba(255, 255, 255, 0.92);
+      background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-      z-index: 1;
-      position: relative;
     }
 
     .YASHNIL-img {
@@ -56,7 +53,7 @@
       height: 180px;
       object-fit: cover;
       border-radius: 50%;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       margin-bottom: 1rem;
     }
 
@@ -64,7 +61,7 @@
       font-family: 'Playfair Display', serif;
       font-size: 2.8rem;
       margin-bottom: 0.5rem;
-      color: #222;
+      color: #111;
     }
 
     p.bio {
@@ -72,7 +69,8 @@
       font-size: 1.2rem;
       max-width: 700px;
       margin: 0 auto 2rem;
-      line-height: 1.7;
+      line-height: 1.8;
+      color: #444;
     }
 
     .buttons a {
@@ -80,39 +78,52 @@
       align-items: center;
       gap: 0.6rem;
       margin: 0.5rem;
-      padding: 0.75rem 1.6rem;
-      border-radius: 30px;
+      padding: 0.8rem 1.8rem;
+      border-radius: 35px;
       text-decoration: none;
       font-weight: 600;
       font-size: 1rem;
       color: white;
       font-family: 'Rubik', sans-serif;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
       transition: all 0.3s ease;
     }
 
     .buttons a:hover {
-      transform: scale(1.05) translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      transform: scale(1.05);
+      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
     }
 
-    .insta { background-color: #E1306C; }
-    .insta:hover { background-color: #c42c5f; }
-
-    .whatsapp { background-color: #25D366; }
-    .whatsapp:hover { background-color: #20b358; }
-
-    .email { background-color: #0072C6; }
-    .email:hover { background-color: #005da0; }
-
-    .phone { background-color: #444; }
-    .phone:hover { background-color: #222; }
+    .insta { background: linear-gradient(135deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); }
+    .whatsapp { background-color: #128C7E; }
+    .email { background-color: #005DA0; }
+    .phone { background-color: #222; }
 
     footer {
       margin-top: 3rem;
       font-size: 0.9rem;
       color: #777;
       font-family: 'Open Sans', sans-serif;
+    }
+
+    @media (max-width: 600px) {
+      .YASHNIL-img {
+        width: 140px;
+        height: 140px;
+      }
+
+      h1 {
+        font-size: 2.2rem;
+      }
+
+      p.bio {
+        font-size: 1rem;
+      }
+
+      .buttons a {
+        padding: 0.7rem 1.2rem;
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
@@ -127,10 +138,10 @@
     </p>
 
     <div class="buttons">
-      <a href="https://instagram.com/yashnil_099" target="_blank" class="insta" rel="noopener">
+      <a href="https://instagram.com/yashnil_099" target="_blank" class="insta">
         <i class="fab fa-instagram"></i> Instagram
       </a>
-      <a href="https://wa.me/919322410521" target="_blank" class="whatsapp" rel="noopener">
+      <a href="https://wa.me/919322410521" target="_blank" class="whatsapp">
         <i class="fab fa-whatsapp"></i> WhatsApp
       </a>
       <a href="mailto:manthanwaryashnil@gmail.com" class="email">
