--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Open Sans', sans-serif;
       color: #333;
-      background-color: #f2f2f2;
       min-height: 100vh;
-      position: relative;
+      background-color: #f2f2f2;
+      overflow-x: hidden;
     }
 
+    /* 🔥 Background collage */
     body::before {
       content: "";
       position: fixed;
@@ -36,6 +41,12 @@
       background-position: top left, bottom right;
       opacity: 0.4;
       z-index: -1;
+      animation: bgFade 20s infinite alternate;
+    }
+
+    @keyframes bgFade {
+      0% { opacity: 0.08; }
+      100% { opacity: 0.15; }
     }
 
     .container {
@@ -45,7 +56,19 @@
       text-align: center;
       background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      animation: fadeInUp 1s ease-out both;
+    }
+
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(50px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .YASHNIL-img {
@@ -55,6 +78,18 @@
       border-radius: 50%;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
       margin-bottom: 1rem;
+      animation: zoomIn 1s ease-out 0.4s both;
+    }
+
+    @keyframes zoomIn {
+      0% {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
 
     h1 {
@@ -62,6 +97,7 @@
       font-size: 2.8rem;
       margin-bottom: 0.5rem;
       color: #111;
+      animation: fadeInUp 0.8s ease-out 0.6s both;
     }
 
     p.bio {
@@ -71,6 +107,7 @@
       margin: 0 auto 2rem;
       line-height: 1.8;
       color: #444;
+      animation: fadeInUp 0.8s ease-out 0.8s both;
     }
 
     .buttons a {
@@ -87,14 +124,32 @@
       font-family: 'Rubik', sans-serif;
       box-shadow: 0 6px 12px rgba(0,0,0,0.1);
       transition: all 0.3s ease;
+      transform: translateY(20px);
+      opacity: 0;
+      animation: fadeUpBtn 0.7s ease-out forwards;
+    }
+
+    .buttons a:nth-child(1) { animation-delay: 1s; }
+    .buttons a:nth-child(2) { animation-delay: 1.2s; }
+    .buttons a:nth-child(3) { animation-delay: 1.4s; }
+    .buttons a:nth-child(4) { animation-delay: 1.6s; }
+
+    @keyframes fadeUpBtn {
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
     }
 
     .buttons a:hover {
-      transform: scale(1.05);
-      box-shadow: 0 12px 24px rgba(0,0,0,0.2);
+      transform: scale(1.07);
+      box-shadow: 0 15px 30px rgba(0,0,0,0.2);
     }
 
-    .insta { background: linear-gradient(135deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); }
+    .insta {
+      background: linear-gradient(135deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888);
+    }
+
     .whatsapp { background-color: #128C7E; }
     .email { background-color: #005DA0; }
     .phone { background-color: #222; }
@@ -104,6 +159,7 @@
       font-size: 0.9rem;
       color: #777;
       font-family: 'Open Sans', sans-serif;
+      animation: fadeInUp 1s ease-out 2s both;
     }
 
     @media (max-width: 600px) {
@@ -121,7 +177,7 @@
       }
 
       .buttons a {
-        padding: 0.7rem 1.2rem;
+        padding: 0.7rem 1.4rem;
         font-size: 0.95rem;
       }
     }
