--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
     }
 
-    .insta { background-color: #E1306C; }
-    .whatsapp { background-color: #25D366; }
-    .email { background-color: #0072C6; }
-    .phone { background-color: #444; }
+   .insta { background: linear-gradient(135deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); }
+    .whatsapp { background-color: #128C7E; }
+    .email { background-color: #005DA0; }
+    .phone { background-color: #222; }
 
     footer {
       margin-top: 3rem;
