--- a/index.html
+++ b/index.html
@@ -120,7 +120,11 @@
     .whatsapp { background-color: #128C7E; }
     .email { background-color: #005DA0; }
     .phone { background-color: #222; }
-    .nav-btn { background-color: #6C63FF; }
+
+    /* 🟡 Gradient added below 👇 */
+    .nav-btn {
+      background: linear-gradient(135deg, #ff5f6d, #ffc371);
+    }
 
     footer {
       margin-top: 3rem;
