--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     /* 🟡 Gradient added below 👇 */
     .nav-btn {
-      background: linear-gradient(135deg, #ff5f6d, #ffc371);
+      (135deg, #6a11cb, #2575fc);
     }
 
     footer {
