--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     /* 🟡 Gradient added below 👇 */
     .nav-btn {
-      (135deg, #6a11cb, #2575fc);
+      135deg, #6a11cb, #2575fc;
     }
 
     footer {
