--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     .phone { background-color: #222; }
 
     /* 🟡 Gradient added below 👇 */
-    .nav-btn {
-      (135deg, #667eea, #764ba2);
-    }
+   .nav-btn {
+  background: linear-gradient(135deg, #667eea, #764ba2);
+}
 
     footer {
       margin-top: 3rem;
