--- a/index.html
+++ b/index.html
@@ -121,40 +121,39 @@
     .email { background-color: #005DA0; }
     .phone { background-color: #222; }
 
-    /* 🟡 Gradient added below 👇 */
-   .nav-btn {
-  background: linear-gradient(135deg, #667eea, #764ba2);
-  border: 2px solid transparent;
-  background-origin: border-box;
-  background-clip: padding-box, border-box;
-  transition: all 0.4s ease;
-  position: relative;
-  z-index: 0;
-  overflow: hidden;
-}
+    /* ✅ Blue to Purple Gradient for nav-btn */
+    .nav-btn {
+      background: linear-gradient(135deg, #667eea, #764ba2);
+      border: 2px solid transparent;
+      background-origin: border-box;
+      background-clip: padding-box, border-box;
+      transition: all 0.4s ease;
+      position: relative;
+      z-index: 0;
+      overflow: hidden;
+      border-radius: 30px;
+    }
 
-.nav-btn::before {
-  content: '';
-  position: absolute;
-  top: -2px; left: -2px; right: -2px; bottom: -2px;
-  background: linear-gradient(135deg, #667eea, #764ba2, #667eea);
-  z-index: -1;
-  filter: blur(10px);
-  opacity: 0;
-  transition: opacity 0.4s ease;
-  border-radius: 30px;
-}
+    .nav-btn::before {
+      content: '';
+      position: absolute;
+      top: -2px; left: -2px; right: -2px; bottom: -2px;
+      background: linear-gradient(135deg, #667eea, #764ba2, #667eea);
+      z-index: -1;
+      filter: blur(10px);
+      opacity: 0;
+      transition: opacity 0.4s ease;
+      border-radius: 30px;
+    }
 
-.nav-btn:hover::before {
-  opacity: 1;
-}
+    .nav-btn:hover::before {
+      opacity: 1;
+    }
 
-.nav-btn:hover {
-  transform: scale(1.07) translateY(-3px);
-  box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
-}
-
-}
+    .nav-btn:hover {
+      transform: scale(1.07) translateY(-3px);
+      box-shadow: 0 10px 30px rgba(102, 126, 234, 0.4);
+    }
 
     footer {
       margin-top: 3rem;
